[gd_scene load_steps=10 format=3 uid="uid://dfm334uml8fnv"]

[ext_resource type="Script" path="res://scripts/arena.gd" id="1_nikpv"]
[ext_resource type="PackedScene" uid="uid://cfbc6ltchrnt2" path="res://scenes/environment/tile_map.tscn" id="2_uvkll"]
[ext_resource type="PackedScene" uid="uid://clmcmx6titcm3" path="res://scenes/player/player.tscn" id="3_vpsid"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="4_iqd0p"]
[ext_resource type="PackedScene" uid="uid://b2vko30ofwo5" path="res://scenes/interfaces/game_ui.tscn" id="5_i1xrx"]
[ext_resource type="PackedScene" uid="uid://cgwo78mwwtw66" path="res://scenes/environment/cauldron.tscn" id="6_8v487"]
[ext_resource type="FontFile" uid="uid://gop0er8gjkq4" path="res://assets/fonts/dogica.ttf" id="7_jf2ad"]
[ext_resource type="Shader" path="res://assets/sprites/environment/tutorial_level.gdshader" id="8_3btl2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i7tyd"]
shader = ExtResource("8_3btl2")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/OCTAVES = 4
shader_parameter/enable_pixelation = true
shader_parameter/pixelation_amount = 150
shader_parameter/fog_direction = Vector2(1, 1)
shader_parameter/scroll_noise_tex = false
shader_parameter/noise_scroll_direction = Vector2(1, 0)

[node name="ArenaLevel" type="Node2D"]
script = ExtResource("1_nikpv")

[node name="TileMap" parent="." instance=ExtResource("2_uvkll")]
layer_0/tile_data = PackedInt32Array(-983040, 196608, 1, -917504, 196608, 1, -851968, 196608, 1, -327680, 196608, 1, -262144, 196608, 1, -196608, 196608, 1, -131072, 196608, 1, -65536, 196608, 1, -983039, 196608, 1, -917503, 196608, 1, -851967, 196608, 1, -655359, 196608, 1, -589823, 196608, 1, -524287, 196608, 1, -458751, 196608, 1, -393215, 196608, 1, -327679, 196608, 1, -262143, 196608, 1, -196607, 196608, 1, -131071, 196608, 1, -65535, 196608, 1, -983038, 196608, 1, -917502, 196608, 1, -851966, 196608, 1, -655358, 196608, 1, -589822, 196608, 1, -524286, 196608, 1, -458750, 196608, 1, -393214, 196608, 1, -327678, 196608, 1, -262142, 196608, 1, -196606, 196608, 1, -131070, 196608, 1, -65534, 196608, 1, -983037, 196608, 1, -917501, 196608, 1, -851965, 196608, 1, -655357, 196608, 1, -589821, 196608, 1, -524285, 196608, 1, -458749, 196608, 1, -393213, 196608, 1, -327677, 196608, 1, -262141, 196608, 1, -983036, 196608, 1, -917500, 196608, 1, -851964, 196608, 1, -655356, 196608, 1, -589820, 196608, 1, -524284, 196608, 1, -458748, 196608, 1, -393212, 196608, 1, -327676, 196608, 1, -262140, 196608, 1, -983035, 196608, 1, -917499, 196608, 1, -851963, 196608, 1, -655355, 196608, 1, -589819, 196608, 1, -524283, 196608, 1, -458747, 196608, 1, -393211, 196608, 1, -327675, 196608, 1, -262139, 196608, 1, -196603, 196608, 1, -131067, 196608, 1, -917498, 196608, 1, -851962, 196608, 1, -786426, 196608, 1, -720890, 196608, 1, -655354, 196608, 1, -589818, 196608, 1, -524282, 196608, 1, -458746, 196608, 1, -393210, 196608, 1, -327674, 196608, 1, -262138, 196608, 1, -196602, 196608, 1, -131066, 196608, 1, -917497, 196608, 1, -851961, 196608, 1, -786425, 196608, 1, -720889, 196608, 1, -655353, 196608, 1, -589817, 196608, 1, -327673, 196608, 1, -262137, 196608, 1, -983032, 196608, 1, -917496, 196608, 1, -851960, 196608, 1, -655352, 196608, 1, -589816, 196608, 1, -327672, 196608, 1, -262136, 196608, 1, -983031, 196608, 1, -917495, 196608, 1, -851959, 196608, 1, -655351, 196608, 1, -589815, 196608, 1, -524279, 196608, 1, -458743, 196608, 1, -393207, 196608, 1, -327671, 196608, 1, -262135, 196608, 1, -196599, 196608, 1, -131063, 196608, 1, -983030, 196608, 1, -917494, 196608, 1, -851958, 196608, 1, -655350, 196608, 1, -589814, 196608, 1, -524278, 196608, 1, -458742, 196608, 1, -393206, 196608, 1, -327670, 196608, 1, -262134, 196608, 1, -196598, 196608, 1, -131062, 196608, 1, -983029, 196608, 1, -917493, 196608, 1, -851957, 196608, 1, -655349, 196608, 1, -589813, 196608, 1, -524277, 196608, 1, -458741, 196608, 1, -393205, 196608, 1, -327669, 196608, 1, -262133, 196608, 1, -196597, 196608, 1, -131061, 196608, 1, -65525, 196608, 1, -983028, 196608, 1, -917492, 196608, 1, -851956, 196608, 1, -655348, 196608, 1, -589812, 196608, 1, -524276, 196608, 1, -458740, 196608, 1, -393204, 196608, 1, -327668, 196608, 1, -262132, 196608, 1, -196596, 196608, 1, -131060, 196608, 1, -65524, 196608, 1, -983027, 196608, 1, -917491, 196608, 1, -851955, 196608, 1, -655347, 196608, 1, -589811, 196608, 1, -524275, 196608, 1, -458739, 196608, 1, -393203, 196608, 1, -327667, 196608, 1, -262131, 196608, 1, -196595, 196608, 1, -131059, 196608, 1, -983026, 196608, 1, -917490, 196608, 1, -851954, 196608, 1, -655346, 196608, 1, -589810, 196608, 1, -524274, 196608, 1, -458738, 196608, 1, -393202, 196608, 1, -327666, 196608, 1, -262130, 196608, 1, -196594, 196608, 1, -131058, 196608, 1, -917519, 196608, 1, -851983, 196608, 1, -786447, 196608, 1, -589839, 196608, 1, -524303, 196608, 1, -458767, 196608, 1, -393231, 196608, 1, -327695, 196608, 1, -262159, 196608, 1, -196623, 196608, 1, -131087, 196608, 1, -65551, 196608, 1, -917518, 196608, 1, -851982, 196608, 1, -786446, 196608, 1, -589838, 196608, 1, -524302, 196608, 1, -458766, 196608, 1, -393230, 196608, 1, -327694, 196608, 1, -262158, 196608, 1, -196622, 196608, 1, -131086, 196608, 1, -65550, 196608, 1, -917517, 196608, 1, -851981, 196608, 1, -786445, 196608, 1, -589837, 196608, 1, -524301, 196608, 1, -458765, 196608, 1, -393229, 196608, 1, -327693, 196608, 1, -262157, 196608, 1, -196621, 196608, 1, -131085, 196608, 1, -65549, 196608, 1, -13, 196608, 1, -917516, 196608, 1, -851980, 196608, 1, -786444, 196608, 1, -589836, 196608, 1, -524300, 196608, 1, -458764, 196608, 1, -393228, 196608, 1, -327692, 196608, 1, -262156, 196608, 1, -196620, 196608, 1, -131084, 196608, 1, -65548, 196608, 1, -12, 196608, 1, -917515, 196608, 1, -851979, 196608, 1, -786443, 196608, 1, -589835, 196608, 1, -524299, 196608, 1, -458763, 196608, 1, -393227, 196608, 1, -327691, 196608, 1, -262155, 196608, 1, -196619, 196608, 1, -131083, 196608, 1, -65547, 196608, 1, -917514, 196608, 1, -851978, 196608, 1, -786442, 196608, 1, -589834, 196608, 1, -524298, 196608, 1, -458762, 196608, 1, -393226, 196608, 1, -327690, 196608, 1, -262154, 196608, 1, -196618, 196608, 1, -131082, 196608, 1, -65546, 196608, 1, -917513, 196608, 1, -851977, 196608, 1, -786441, 196608, 1, -589833, 196608, 1, -524297, 196608, 1, -262153, 196608, 1, -196617, 196608, 1, -851976, 196608, 1, -786440, 196608, 1, -720904, 196608, 1, -655368, 196608, 1, -589832, 196608, 1, -524296, 196608, 1, -262152, 196608, 1, -196616, 196608, 1, -851975, 196608, 1, -786439, 196608, 1, -720903, 196608, 1, -655367, 196608, 1, -589831, 196608, 1, -524295, 196608, 1, -262151, 196608, 1, -196615, 196608, 1, -131079, 196608, 1, -65543, 196608, 1, -917510, 196608, 1, -851974, 196608, 1, -786438, 196608, 1, -589830, 196608, 1, -524294, 196608, 1, -262150, 196608, 1, -196614, 196608, 1, -131078, 196608, 1, -65542, 196608, 1, -917509, 196608, 1, -851973, 196608, 1, -786437, 196608, 1, -589829, 196608, 1, -524293, 196608, 1, -262149, 196608, 1, -196613, 196608, 1, -917508, 196608, 1, -851972, 196608, 1, -786436, 196608, 1, -589828, 196608, 1, -524292, 196608, 1, -458756, 196608, 1, -393220, 196608, 1, -327684, 196608, 1, -262148, 196608, 1, -196612, 196608, 1, -917507, 196608, 1, -851971, 196608, 1, -786435, 196608, 1, -589827, 196608, 1, -524291, 196608, 1, -458755, 196608, 1, -393219, 196608, 1, -327683, 196608, 1, -262147, 196608, 1, -196611, 196608, 1, -131075, 196608, 1, -65539, 196608, 1, -3, 196608, 1, -917506, 196608, 1, -851970, 196608, 1, -786434, 196608, 1, -589826, 196608, 1, -524290, 196608, 1, -458754, 196608, 1, -393218, 196608, 1, -327682, 196608, 1, -262146, 196608, 1, -196610, 196608, 1, -131074, 196608, 1, -65538, 196608, 1, -2, 196608, 1, -917505, 196608, 1, -851969, 196608, 1, -786433, 196608, 1, -262145, 196608, 1, -196609, 196608, 1, -131073, 196608, 1, -65537, 196608, 1, -1, 196608, 1, 131057, 196608, 1, 196593, 196608, 1, 262129, 196608, 1, 327665, 196608, 1, 393201, 196608, 1, 458737, 196608, 1, 524273, 196608, 1, 589809, 196608, 1, 655345, 196608, 1, 851953, 196608, 1, 917489, 196608, 1, 983025, 196608, 1, 1048561, 196608, 1, 131058, 196608, 1, 196594, 196608, 1, 262130, 196608, 1, 327666, 196608, 1, 393202, 196608, 1, 458738, 196608, 1, 524274, 196608, 1, 589810, 196608, 1, 655346, 196608, 1, 851954, 196608, 1, 917490, 196608, 1, 983026, 196608, 1, 1048562, 196608, 1, 65523, 196608, 1, 131059, 196608, 1, 196595, 196608, 1, 262131, 196608, 1, 327667, 196608, 1, 393203, 196608, 1, 458739, 196608, 1, 524275, 196608, 1, 589811, 196608, 1, 655347, 196608, 1, 851955, 196608, 1, 917491, 196608, 1, 983027, 196608, 1, 1048563, 196608, 1, 65524, 196608, 1, 131060, 196608, 1, 196596, 196608, 1, 262132, 196608, 1, 327668, 196608, 1, 393204, 196608, 1, 458740, 196608, 1, 524276, 196608, 1, 589812, 196608, 1, 655348, 196608, 1, 851956, 196608, 1, 917492, 196608, 1, 983028, 196608, 1, 1048564, 196608, 1, 131061, 196608, 1, 196597, 196608, 1, 262133, 196608, 1, 327669, 196608, 1, 393205, 196608, 1, 458741, 196608, 1, 524277, 196608, 1, 589813, 196608, 1, 655349, 196608, 1, 851957, 196608, 1, 917493, 196608, 1, 983029, 196608, 1, 1048565, 196608, 1, 131062, 196608, 1, 196598, 196608, 1, 262134, 196608, 1, 327670, 196608, 1, 393206, 196608, 1, 458742, 196608, 1, 524278, 196608, 1, 589814, 196608, 1, 655350, 196608, 1, 851958, 196608, 1, 917494, 196608, 1, 983030, 196608, 1, 1048566, 196608, 1, 262135, 196608, 1, 327671, 196608, 1, 589815, 196608, 1, 655351, 196608, 1, 851959, 196608, 1, 917495, 196608, 1, 983031, 196608, 1, 262136, 196608, 1, 327672, 196608, 1, 589816, 196608, 1, 655352, 196608, 1, 720888, 196608, 1, 786424, 196608, 1, 851960, 196608, 1, 917496, 196608, 1, 983032, 196608, 1, 131065, 196608, 1, 196601, 196608, 1, 262137, 196608, 1, 327673, 196608, 1, 393209, 196608, 1, 458745, 196608, 1, 524281, 196608, 1, 589817, 196608, 1, 655353, 196608, 1, 720889, 196608, 1, 786425, 196608, 1, 851961, 196608, 1, 917497, 196608, 1, 983033, 196608, 1, 131066, 196608, 1, 196602, 196608, 1, 262138, 196608, 1, 327674, 196608, 1, 393210, 196608, 1, 458746, 196608, 1, 524282, 196608, 1, 589818, 196608, 1, 655354, 196608, 1, 851962, 196608, 1, 917498, 196608, 1, 983034, 196608, 1, 1048570, 196608, 1, 262139, 196608, 1, 327675, 196608, 1, 393211, 196608, 1, 458747, 196608, 1, 524283, 196608, 1, 589819, 196608, 1, 655355, 196608, 1, 851963, 196608, 1, 917499, 196608, 1, 983035, 196608, 1, 1048571, 196608, 1, 262140, 196608, 1, 327676, 196608, 1, 393212, 196608, 1, 458748, 196608, 1, 524284, 196608, 1, 589820, 196608, 1, 655356, 196608, 1, 851964, 196608, 1, 917500, 196608, 1, 983036, 196608, 1, 1048572, 196608, 1, 65533, 196608, 1, 131069, 196608, 1, 196605, 196608, 1, 262141, 196608, 1, 327677, 196608, 1, 393213, 196608, 1, 458749, 196608, 1, 524285, 196608, 1, 589821, 196608, 1, 655357, 196608, 1, 851965, 196608, 1, 917501, 196608, 1, 983037, 196608, 1, 1048573, 196608, 1, 65534, 196608, 1, 131070, 196608, 1, 196606, 196608, 1, 262142, 196608, 1, 327678, 196608, 1, 393214, 196608, 1, 458750, 196608, 1, 524286, 196608, 1, 589822, 196608, 1, 655358, 196608, 1, 851966, 196608, 1, 917502, 196608, 1, 983038, 196608, 1, 1048574, 196608, 1, 65535, 196608, 1, 131071, 196608, 1, 196607, 196608, 1, 262143, 196608, 1, 327679, 196608, 1, 851967, 196608, 1, 917503, 196608, 1, 983039, 196608, 1, 1048575, 196608, 1, 0, 196608, 1, 65536, 196608, 1, 131072, 196608, 1, 196608, 196608, 1, 262144, 196608, 1, 786432, 196608, 1, 851968, 196608, 1, 917504, 196608, 1, 983040, 196608, 1, 1, 196608, 1, 65537, 196608, 1, 131073, 196608, 1, 196609, 196608, 1, 262145, 196608, 1, 327681, 196608, 1, 393217, 196608, 1, 458753, 196608, 1, 524289, 196608, 1, 589825, 196608, 1, 786433, 196608, 1, 851969, 196608, 1, 917505, 196608, 1, 983041, 196608, 1, 2, 196608, 1, 65538, 196608, 1, 131074, 196608, 1, 196610, 196608, 1, 262146, 196608, 1, 327682, 196608, 1, 393218, 196608, 1, 458754, 196608, 1, 524290, 196608, 1, 589826, 196608, 1, 786434, 196608, 1, 851970, 196608, 1, 917506, 196608, 1, 983042, 196608, 1, 196611, 196608, 1, 262147, 196608, 1, 327683, 196608, 1, 393219, 196608, 1, 458755, 196608, 1, 524291, 196608, 1, 589827, 196608, 1, 786435, 196608, 1, 851971, 196608, 1, 917507, 196608, 1, 983043, 196608, 1, 196612, 196608, 1, 262148, 196608, 1, 327684, 196608, 1, 393220, 196608, 1, 458756, 196608, 1, 524292, 196608, 1, 589828, 196608, 1, 786436, 196608, 1, 851972, 196608, 1, 917508, 196608, 1, 983044, 196608, 1, 65541, 196608, 1, 131077, 196608, 1, 196613, 196608, 1, 262149, 196608, 1, 327685, 196608, 1, 393221, 196608, 1, 458757, 196608, 1, 524293, 196608, 1, 589829, 196608, 1, 786437, 196608, 1, 851973, 196608, 1, 917509, 196608, 1, 983045, 196608, 1, 65542, 196608, 1, 131078, 196608, 1, 196614, 196608, 1, 262150, 196608, 1, 327686, 196608, 1, 393222, 196608, 1, 458758, 196608, 1, 524294, 196608, 1, 589830, 196608, 1, 655366, 196608, 1, 720902, 196608, 1, 786438, 196608, 1, 851974, 196608, 1, 917510, 196608, 1, 196615, 196608, 1, 262151, 196608, 1, 524295, 196608, 1, 589831, 196608, 1, 655367, 196608, 1, 720903, 196608, 1, 786439, 196608, 1, 851975, 196608, 1, 917511, 196608, 1, 196616, 196608, 1, 262152, 196608, 1, 524296, 196608, 1, 589832, 196608, 1, 786440, 196608, 1, 851976, 196608, 1, 917512, 196608, 1, 983048, 196608, 1, 65545, 196608, 1, 131081, 196608, 1, 196617, 196608, 1, 262153, 196608, 1, 327689, 196608, 1, 393225, 196608, 1, 458761, 196608, 1, 524297, 196608, 1, 589833, 196608, 1, 786441, 196608, 1, 851977, 196608, 1, 917513, 196608, 1, 983049, 196608, 1, 65546, 196608, 1, 131082, 196608, 1, 196618, 196608, 1, 262154, 196608, 1, 327690, 196608, 1, 393226, 196608, 1, 458762, 196608, 1, 524298, 196608, 1, 589834, 196608, 1, 786442, 196608, 1, 851978, 196608, 1, 917514, 196608, 1, 983050, 196608, 1, 11, 196608, 1, 65547, 196608, 1, 131083, 196608, 1, 196619, 196608, 1, 262155, 196608, 1, 327691, 196608, 1, 393227, 196608, 1, 458763, 196608, 1, 524299, 196608, 1, 589835, 196608, 1, 786443, 196608, 1, 851979, 196608, 1, 917515, 196608, 1, 983051, 196608, 1, 12, 196608, 1, 65548, 196608, 1, 131084, 196608, 1, 196620, 196608, 1, 262156, 196608, 1, 327692, 196608, 1, 393228, 196608, 1, 458764, 196608, 1, 524300, 196608, 1, 589836, 196608, 1, 786444, 196608, 1, 851980, 196608, 1, 917516, 196608, 1, 983052, 196608, 1, 65549, 196608, 1, 131085, 196608, 1, 196621, 196608, 1, 262157, 196608, 1, 327693, 196608, 1, 393229, 196608, 1, 458765, 196608, 1, 524301, 196608, 1, 589837, 196608, 1, 786445, 196608, 1, 851981, 196608, 1, 917517, 196608, 1, 983053, 196608, 1, 65550, 196608, 1, 131086, 196608, 1, 196622, 196608, 1, 262158, 196608, 1, 327694, 196608, 1, 393230, 196608, 1, 458766, 196608, 1, 524302, 196608, 1, 589838, 196608, 1, 786446, 196608, 1, 851982, 196608, 1, 917518, 196608, 1, 983054, 196608, 1, 1048567, 196608, 1, -458759, 196608, 1, -393223, 196608, 1, -327687, 196608, 1, -458758, 196608, 1, -393222, 196608, 1, -327686, 196608, 1, -458757, 196608, 1, -393221, 196608, 1, -327685, 196608, 1, -196601, 196608, 1, -131065, 196608, 1, -65529, 196608, 1, 7, 196608, 1, 65543, 196608, 1, 131079, 196608, 1, -196600, 196608, 1, -131064, 196608, 1, -65528, 196608, 1, 8, 196608, 1, 65544, 196608, 1, 131080, 196608, 1, -65527, 196608, 1, 9, 196608, 1, -65526, 196608, 1, 10, 196608, 1, -11, 196608, 1, 65525, 196608, 1, -10, 196608, 1, 65526, 196608, 1, -131081, 196608, 1, -65545, 196608, 1, -9, 196608, 1, 65527, 196608, 1, 131063, 196608, 1, 196599, 196608, 1, -131080, 196608, 1, -65544, 196608, 1, -8, 196608, 1, 65528, 196608, 1, 131064, 196608, 1, 196600, 196608, 1, -983056, 0, 2, -917520, 0, 3, -851984, 0, 3, -786448, 0, 3, -720912, 0, 4, -655376, 0, 2, -589840, 0, 3, -524304, 0, 3, -458768, 0, 3, -393232, 0, 3, -327696, 0, 3, -262160, 0, 3, -196624, 0, 3, -131088, 0, 3, -65552, 0, 3, -16, 0, 4, 65520, 0, 2, 131056, 0, 3, 196592, 0, 3, 262128, 0, 3, 327664, 0, 3, 393200, 0, 3, 458736, 0, 3, 524272, 0, 3, 589808, 0, 3, 655344, 0, 3, 720880, 0, 4, 786416, 0, 2, 851952, 0, 3, 917488, 0, 3, 983024, 0, 3, 1048560, 0, 3, 1114096, 0, 4, -983055, 65536, 2, -720911, 65536, 4, -655375, 65536, 2, -15, 65536, 4, 65521, 65536, 2, 720881, 65536, 4, 786417, 65536, 2, 1114097, 65536, 4, -983054, 65536, 2, -720910, 65536, 4, -655374, 65536, 2, -14, 262144, 2, 65522, 262144, 3, 720882, 65536, 4, 786418, 65536, 2, 1114098, 65536, 4, -983053, 65536, 2, -720909, 65536, 4, -655373, 65536, 2, 720883, 65536, 4, 786419, 65536, 2, 1114099, 65536, 4, -983052, 65536, 2, -720908, 65536, 4, -655372, 65536, 2, 720884, 65536, 4, 786420, 65536, 2, 1114100, 65536, 4, -983051, 65536, 2, -720907, 65536, 4, -655371, 65536, 2, 720885, 65536, 4, 786421, 65536, 2, 1114101, 65536, 4, -983050, 65536, 2, -720906, 65536, 4, -655370, 65536, 2, 720886, 65536, 4, 786422, 65536, 2, 1114102, 65536, 4, -983049, 65536, 2, -720905, 262144, 2, -655369, 262144, 3, -458761, 196608, 2, -393225, 131072, 3, -327689, 196608, 3, 393207, 196608, 2, 458743, 131072, 3, 524279, 196608, 3, 720887, 262144, 2, 786423, 262144, 3, 1114103, 65536, 4, -983048, 131072, 2, -917512, 196608, 3, -458760, 262144, 2, -393224, 0, 3, -327688, 262144, 3, 393208, 262144, 2, 458744, 0, 3, 524280, 262144, 3, 1048568, 196608, 2, 1114104, 131072, 4, -983047, 0, 2, -917511, 262144, 3, -7, 196608, 2, 65529, 196608, 3, 1048569, 262144, 2, 1114105, 0, 4, -983046, 65536, 2, -720902, 196608, 2, -655366, 196608, 3, -6, 65536, 4, 65530, 65536, 2, 720890, 196608, 2, 786426, 196608, 3, 1114106, 65536, 4, -983045, 65536, 2, -720901, 65536, 4, -655365, 65536, 2, -131077, 196608, 2, -65541, 131072, 3, -5, 131072, 4, 65531, 131072, 2, 131067, 131072, 3, 196603, 196608, 3, 720891, 65536, 805306370, 786427, 65536, 805306372, 1114107, 65536, 4, -983044, 65536, 2, -720900, 65536, 4, -655364, 65536, 2, -131076, 262144, 2, -65540, 0, 3, -4, 0, 3, 65532, 0, 3, 131068, 0, 3, 196604, 262144, 3, 720892, 65536, 805306370, 786428, 65536, 805306372, 1114108, 65536, 4, -983043, 65536, 2, -720899, 65536, 4, -655363, 65536, 2, 720893, 65536, 805306370, 786429, 65536, 805306372, 1114109, 65536, 4, -983042, 65536, 2, -720898, 65536, 4, -655362, 65536, 2, 720894, 65536, 805306370, 786430, 65536, 805306372, 1114110, 65536, 4, -983041, 65536, 2, -720897, 65536, 4, -655361, 131072, 2, -589825, 131072, 3, -524289, 131072, 3, -458753, 131072, 3, -393217, 131072, 3, -327681, 196608, 3, 393215, 196608, 2, 458751, 0, 805306371, 524287, 0, 805306371, 589823, 0, 805306371, 655359, 0, 805306371, 720895, 0, 805306370, 786431, 65536, 805306372, 1114111, 65536, 4, -1048576, 65536, 2, -786432, 65536, 4, -720896, 0, 2, -655360, 0, 3, -589824, 0, 3, -524288, 0, 3, -458752, 0, 3, -393216, 262144, 3, 327680, 262144, 2, 393216, 131072, 805306371, 458752, 131072, 805306371, 524288, 131072, 805306371, 589824, 131072, 805306371, 655360, 131072, 805306370, 720896, 65536, 805306372, 1048576, 65536, 4, -1048575, 65536, 2, -786431, 65536, 4, -720895, 65536, 2, 655361, 65536, 805306370, 720897, 65536, 805306372, 1048577, 65536, 4, -1048574, 65536, 2, -786430, 65536, 4, -720894, 65536, 2, 655362, 65536, 805306370, 720898, 65536, 805306372, 1048578, 65536, 4, -1048573, 65536, 2, -786429, 65536, 4, -720893, 65536, 2, -196605, 196608, 2, -131069, 131072, 3, -65533, 131072, 3, 3, 131072, 3, 65539, 131072, 3, 131075, 196608, 3, 655363, 65536, 805306370, 720899, 65536, 805306372, 1048579, 65536, 4, -1048572, 65536, 2, -786428, 65536, 4, -720892, 65536, 2, -196604, 262144, 2, -131068, 0, 3, -65532, 0, 4, 4, 0, 2, 65540, 0, 3, 131076, 262144, 3, 655364, 65536, 805306370, 720900, 65536, 805306372, 1048580, 65536, 4, -1048571, 65536, 2, -786427, 262144, 2, -720891, 262144, 3, -65531, 65536, 4, 5, 65536, 2, 655365, 262144, 2, 720901, 262144, 3, 1048581, 65536, 4, -1048570, 131072, 2, -983034, 196608, 3, -65530, 262144, 2, 6, 262144, 3, 983046, 196608, 2, 1048582, 131072, 4, -1048569, 0, 2, -983033, 262144, 3, -524281, 196608, 2, -458745, 131072, 3, -393209, 196608, 3, 327687, 196608, 2, 393223, 131072, 3, 458759, 196608, 3, 983047, 262144, 2, 1048583, 0, 4, -1048568, 65536, 2, -786424, 196608, 2, -720888, 196608, 3, -524280, 262144, 2, -458744, 0, 3, -393208, 262144, 3, 327688, 262144, 2, 393224, 0, 3, 458760, 262144, 3, 655368, 196608, 2, 720904, 196608, 3, 1048584, 65536, 4, -1048567, 65536, 2, -786423, 65536, 4, -720887, 65536, 2, 655369, 65536, 4, 720905, 65536, 2, 1048585, 65536, 4, -1048566, 65536, 2, -786422, 65536, 4, -720886, 65536, 2, 655370, 65536, 4, 720906, 65536, 2, 1048586, 65536, 4, -1048565, 65536, 2, -786421, 65536, 4, -720885, 65536, 2, 655371, 65536, 4, 720907, 65536, 2, 1048587, 65536, 4, -1048564, 65536, 2, -786420, 65536, 4, -720884, 65536, 2, 655372, 65536, 4, 720908, 65536, 2, 1048588, 65536, 4, -1048563, 65536, 2, -786419, 65536, 4, -720883, 65536, 2, -65523, 196608, 2, 13, 196608, 3, 655373, 65536, 4, 720909, 65536, 2, 1048589, 65536, 4, -1048562, 65536, 2, -786418, 65536, 4, -720882, 65536, 2, -65522, 65536, 4, 14, 65536, 2, 655374, 65536, 4, 720910, 65536, 2, 1048590, 65536, 4, -1048561, 131072, 2, -983025, 131072, 3, -917489, 131072, 3, -851953, 131072, 3, -786417, 131072, 4, -720881, 131072, 2, -655345, 131072, 3, -589809, 131072, 3, -524273, 131072, 3, -458737, 131072, 3, -393201, 131072, 3, -327665, 131072, 3, -262129, 131072, 3, -196593, 131072, 3, -131057, 131072, 3, -65521, 131072, 4, 15, 131072, 2, 65551, 131072, 3, 131087, 131072, 3, 196623, 131072, 3, 262159, 131072, 3, 327695, 131072, 3, 393231, 131072, 3, 458767, 131072, 3, 524303, 131072, 3, 589839, 131072, 3, 655375, 131072, 4, 720911, 131072, 2, 786447, 131072, 3, 851983, 131072, 3, 917519, 131072, 3, 983055, 131072, 3, 1048591, 131072, 4)

[node name="Player" parent="." instance=ExtResource("3_vpsid")]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(7, 7)
position_smoothing_enabled = true
position_smoothing_speed = 50.0
script = ExtResource("4_iqd0p")

[node name="GUI" parent="." instance=ExtResource("5_i1xrx")]
unique_name_in_owner = true

[node name="Cauldron" parent="." instance=ExtResource("6_8v487")]
position = Vector2(0, -30)

[node name="ArenaInfo" type="CanvasLayer" parent="."]

[node name="RoundLabel" type="Label" parent="ArenaInfo"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 22.0
offset_right = 224.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_jf2ad")
theme_override_font_sizes/font_size = 64
text = "Round 0"

[node name="EnemiesLabel" type="Label" parent="ArenaInfo"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 107.0
offset_right = 224.0
offset_bottom = 178.0
grow_horizontal = 2
theme_override_constants/line_spacing = 15
theme_override_fonts/font = ExtResource("7_jf2ad")
theme_override_font_sizes/font_size = 32
text = "Enemies
0"
horizontal_alignment = 1

[node name="RoundStartTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_i7tyd")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -674.0
offset_top = -398.0
offset_right = 626.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="health_change_signal" from="Player" to="GUI" method="_on_player_health_change_signal"]
[connection signal="timeout" from="RoundStartTimer" to="." method="_on_round_start_timer_timeout"]
